# hanoitower

./: .gitignore  build.bat  common_test.h  config.cpp  config.h  generateAndBuildAll.sh  generateAndBuildMainOnly.sh  generateAndBuildTestOnly.sh  main.cpp  nonius_runner.cpp
buildconf/all/: CMakeLists.txt
buildconf/base/: CMakeLists.txt
buildconf/mainonly/: CMakeLists.txt
buildconf/testonly/: CMakeLists.txt
game/: board.cpp  board.h  disk.cpp  disk.h  game.cpp  game.h  rods.h  util.cpp  util.h
tests/: game_test.cpp  test_runner.h
